# ai_observability

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
base/: .env.example  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  rag.py  requirements.txt
docs/: openai_agents_openlit_vs_openllmetry.md
experiments/01_otel/: .env.example  Makefile  README.md  app.py  dashboard.grafana.json  docker-compose.yml  instrument.py  pyproject.toml  rag.py
experiments/02_openllmetry/: .env.example  Dockerfile  Makefile  README.md  app.py  dashboard.grafana.json  docker-compose.yml  failure_modes.md  genai-metrics.json  rag.py
experiments/02_openllmetry/sample_data/: kubernetes.txt
experiments/03_openllmetry_manual/: .env.example  Makefile  README.md  app.py  dashboard.grafana.json  dashboard.json  docker-compose.yml  failure_modes.md
experiments/04_bifrost/: .env.example  Makefile  README.md  app.py  dashboard.grafana.json  docker-compose.yml  instrument.py  pyproject.toml  rag.py  sample_users.txt  test_bifrost.py
experiments/04_bifrost/experiment_data/: sample_chat_models.txt
experiments/04_bifrost/sample_data/: incident_response.txt  observability.txt  payments.txt  rag_quality.txt
experiments/04_bifrost/scripts/: random_rag.sh
experiments/bifrost/: .env.example  Makefile  README.md  app.py  dashboard.grafana.json  docker-compose.yml  failure_modes.md  pyproject.toml
experiments/bifrost/experiment_data/: sample_chat_models.yaml.example  sample_questions.txt  sample_questions.yaml  sample_users.yaml
experiments/bifrost/sample_data/: feature_flags.txt
experiments/bifrost/scripts/: random_rag.py
experiments/openlit_openai_agents/: .env.example  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
experiments/openlit_openai_agents/dashboards/: dashboard.api.json  dashboard.grafana.json
experiments/openlit_openai_agents/src/: __init__.py  instrument.py  rag.py
experiments/openllmetry/: .env.example  Makefile  README.md  app.py  dashboard.grafana.json  docker-compose.yml  failure_modes.md  pyproject.toml
experiments/openllmetry_manual/: .env.example  README.md  app.py  dashboard.grafana.json  docker-compose.yml  failure_modes.md  instrument.py  pyproject.toml
experiments/openllmetry_manual/histogram_issue/: README.md
experiments/openllmetry_openai_agents/: .env.example  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
experiments/openllmetry_openai_agents/dashboards/: dashboard.api.json  dashboard.grafana.json
experiments/openllmetry_openai_agents/src/: __init__.py  instrument.py  rag.py
experiments/otel/: .env.example  README.md  app.py  dashboard.grafana.json  docker-compose.yml  failure_modes.md  rag.py
experiments/portkey/: README.md
experiments/portkey/portkey-local-poc/: README.md  (+3 more)
infra/: .enc.example  .env.example  Makefile  README.md  bootstrap_signoz.sh  docker-compose.yml  load-config.sh
infra/bifrost/: README.md  docker-compose.yml  generate-config.sh  up.sh
infra/otel-collector-gateway/: config.grafana.yaml  config.signoz.yaml  config.yaml  docker-compose.yml
infra/postgres/: docker-compose.yml
(+29 files in other folders)
