[project]
name = "ai-observability-base"
version = "0.1.0"
description = "Uninstrumented FastAPI RAG app for AI observability benchmarking."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "openai>=1.40.0",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.3.6",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.0",
]
