[project]
name = "ai-observability-openllmetry-openai-agents"
version = "0.1.0"
description = "Demonstrates the OpenLLMetry metrics gap for OpenAI Agents SDK."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-dotenv>=1,<2",
  "openai-agents==0.17.5",
  "traceloop-sdk==0.61.0",
  "opentelemetry-api>=1.38,<2",
  "opentelemetry-sdk>=1.38,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.38,<2",
  "opentelemetry-instrumentation-fastapi>=0.59b0,<1",
  "opentelemetry-instrumentation-logging>=0.59b0,<1",
]
